package app;

import app.adapter.AdapterPatternDemo;

public class Main {

    public static void main(String[] args) {
        AdapterPatternDemo.adapter();
    }
}
