package app.loader;

public interface IAdvancedLoader {
    void openJpg(String pictureName);
    void openPng(String pictureName);
}
