package app.loader;

public interface IMediaLoader {
    void launch(String pictureExtension, String pictureName);
}
